--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Progate</title>
+  <title>WineTribe</title>
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
@@ -15,7 +15,7 @@
       </div>
       <span class="fa fa-bars menu-icon"></span>
       <div class="header-right">
-        <a href="#">レッスン</a>
+        <a href="#">ワインリスト</a>
         <a href="#">新規登録</a>
         <a href="#" class="login">ログイン</a>
       </div>
@@ -23,8 +23,8 @@
   </header>
   <div class="top-wrapper">
     <div class="container">
-      <h1>LEARN TO CODE.<br>LEARN TO BE CREATIVE.</h1>
-      <p>Progateはオンラインプログラミング学習サービスです 。<br>初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。</p>
+      <h1>The Wine Tribe.<br>Yamanashi Wine to tables in the world.</h1>
+      <p>Wine-TribeはGI-Yamanashiを始めとした甲州・信州産ワインの販売サイトです。<br>生産者を交えたコミュニティで、今旬の山梨ワインを楽しみましょう。</p>
       <div class="btn-wrapper">
         <a href="#" class="btn signup">新規登録はこちら</a>
         <p>or</p>
@@ -36,36 +36,36 @@
   <div class="lesson-wrapper">
     <div class="container">
       <div class="heading">
-        <h2>Learn Where to Get Started!</h2>
+        <h2>Ask producers Where to Get know our Wine!</h2>
       </div>
       <div class="lessons">
         <div class="lesson">
           <div class="lesson-icon">
             <img src="https://prog-8.com/images/html/advanced/html.png">
-            <p>HTML & CSS</p>
+            <p>山梨県西部</p>
           </div>
-          <p class="text-contents">ウェブページの作成に使用される言語です。HTMLとCSSを組み合わせることで、静的なページを作り上げることができます。</p>
+          <p class="text-contents">サントリー登美の丘ワイナリー、サドヤワイナリーーなど、歴史のあるワイナリーが多品種葡萄から山梨ワインの生産を行っています。</p>
         </div>
         <div class="lesson">
           <div class="lesson-icon">
             <img src="https://prog-8.com/images/html/advanced/jQuery.png">
-            <p>jQuery</p>
+            <p>山梨県勝沼市</p>
           </div>
-          <p class="text-contents">素敵な動きを手軽に実装できるJavaScriptライブラリです。 アニメーション効果をつけたり、Ajax（エイジャックス）を使って外部ファイルを読み込んだりと色々なことができます。</p>
+          <p class="text-contents">日本最大数のワイナリーを誇る勝沼エリア。グレイスワインの中央葡萄酒を始め、ルバイヤートの丸藤葡萄酒工業やシャトー勝沼、シャトージュンなど日本を牽引するワイナリーも多数あります。</p>
         </div>
         <div class="lesson">
           <div class="lesson-icon">
             <img src="https://prog-8.com/images/html/advanced/ruby.png">
-            <p>Ruby</p>
+            <p>山梨県東部</p>
           </div>
-          <p class="text-contents">オープンソースの動的なプログラミング言語で、 シンプルさと高い生産性を備えています。大きなWebアプリケーションから小さな日用ツールまで、さまざまなソフトウェアを作ることができます。</p>
+          <p class="text-contents">東部エリアには、歴史のあるサントネージュから新規で話題性のあるKisvinなど個性的なワイナリーがひしめいています。勝沼市とは全く違う形状からアロマや味わいが大きく違うワインが生産されています。</p>
         </div>
         <div class="lesson">
           <div class="lesson-icon">
             <img src="https://prog-8.com/images/html/advanced/php.png">
-            <p>PHP</p>
+            <p>長野県</p>
           </div>
-          <p class="text-contents">HTMLだけではページの内容を変えることはできません。PHPはHTMLにプログラムを埋め込み、それを可能にします。</p>
+          <p class="text-contents">信州ワインバレー構想を掲げ、４つのテノワール（ワインを取り巻く自然環境）を明確に分類したブランド化が行われている長野ワイン。ワイン用葡萄生産量は山梨県の約１.４倍あり、国内１。</p>
         </div>
       </div>
       <div class="clear"></div>
@@ -74,16 +74,16 @@
   <div class="message-wrapper">
     <div class="container">
       <div class="heading">
-        <h2>さぁ、あなたもProgateでプログラミングを学んでみませんか?</h2>
-        <h3>Let's learn to code, learn to be creative!</h3>
+        <h2>あなたも世界で注目されている甲州・信州のワインを、生産者の声を聞きながら味わってみませんか?</h2>
+        <h3>Let's learn to Japanese Wine　from the producers, and taste it!</h3>
       </div>
-      <span class="btn message">さっそく開発する</span>
+      <span class="btn message">さっそく話を聞いてみる。</span>
     </div>
   </div>
   <footer>
     <div class="container">
       <img src="https://prog-8.com/images/html/advanced/footer_logo.png">
-      <p>Learn to Code, Learn to be Creative.</p>
+      <p>learn to Japanese Wine　from the producers, and taste it.</p>
     </div>
   </footer>
 </body>
