--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <div class="container">
       <div class="header-left">
-        <img class="logo" src="festribe_4.png">
+        <img class="logo" src="festribe_4.jpg">
       </div>
       <span class="fa fa-bars menu-icon"></span>
       <div class="header-right">
@@ -82,7 +82,7 @@
   </div>
   <footer>
     <div class="container">
-      <img src="festribe_3.png">
+      <img src="festribe_3.jpg">
       <p>learn to Japanese Wine from the producers, and taste it.</p>
     </div>
   </footer>
