--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <div class="container">
       <div class="header-left">
-        <img class="logo" src="favicon_FesTribe260x260">
+        <a href="#" class="login">【WineTribe】</a>
       </div>
       <span class="fa fa-bars menu-icon"></span>
       <div class="header-right">
