--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <div class="container">
       <div class="header-left">
-        <a href="#" class="login">WineTribe Inc.</a>
+        <a href="#" class="login">【WineTribe Inc.】</a>
       </div>
       <span class="fa fa-bars menu-icon"></span>
       <div class="header-right">
