--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <img src="https://prog-8.com/images/html/advanced/html.png">
             <p>山梨県西部</p>
           </div>
-          <p class="text-contents">サントリー登美の丘ワイナリー、サドヤワイナリーーなど、歴史のあるワイナリーが多品種葡萄から山梨ワインの生産を行っています。</p>
+          <p class="text-contents">サントリー登美の丘ワイナリー、サドヤワイナリーーなど、歴史のあるワイナリーが点在。多品種の葡萄を栽培し、バリエーション豊かなワインの生産を行っています。</p>
         </div>
         <div class="lesson">
           <div class="lesson-icon">
@@ -65,7 +65,7 @@
             <img src="https://prog-8.com/images/html/advanced/php.png">
             <p>長野県</p>
           </div>
-          <p class="text-contents">信州ワインバレー構想を掲げ、４つのテノワール（ワインを取り巻く自然環境）を明確に分類したブランド化が行われている長野ワイン。ワイン用葡萄生産量は山梨県の約１.４倍あり、国内１。</p>
+          <p class="text-contents">信州ワインバレー構想を掲げ、４つのテノワール（ワインを取り巻く自然環境）を明確に分類したブランド化が行われている長野ワイン。ワイン用葡萄の生産量は、なんと山梨県の約１.４倍もあり、国内No.１を誇ります。</p>
         </div>
       </div>
       <div class="clear"></div>
